--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   body,
   #root
    {
-    @apply w-full h-full overflow-hidden min-h-screen min-w-[100vw];
+    @apply  h-full overflow-hidden min-h-screen w-screen;
   }
 }
 
